# Rlint

./: .coderabbit.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench/: run.sh
examples/: sample.rb
src/: cache.rs  cli.rs  config.rs  diagnostic.rs  diff_filter.rs  file_collector.rs  fixer.rs  lexer.rs  lib.rs  linter.rs  main.rs  parser.rs  reporter.rs  rubocop_compat.rs  runner.rs  suppression.rs  tree.rs  watcher.rs
src/rules/: complexity.rs  frozen_string_literal.rs  line_length.rs  missing_frozen_literal.rs  mod.rs  naming.rs  security.rs  style.rs  syntax.rs  trailing_whitespace.rs
src/rules/ast_rules/: mod.rs  r060_unused_variable.rs  r061_nil_comparison.rs
src/rules/style/: mod.rs  r020_semicolon.rs  r021_operator_spacing.rs  r022_trailing_comma.rs  r023_blank_lines.rs  r024_p_nil.rs  r025_final_newline.rs  r026_method_spacing.rs  r027_empty_method.rs  r028_negated_if.rs  r029_double_negation.rs  r033_redundant_self.rs
tests/: integration.rs
tests/fixtures/: clean.rb  nil_comparison.rb  violations.rb
