[package]
name = "rlint"
version = "0.1.0"
edition = "2021"
description = "A fast Ruby linter written in Rust"
license = "MIT"

[[bin]]
name = "rlint"
path = "src/main.rs"

[lib]
name = "rlint"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
colored = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
