[package]
name = "rblint"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "A fast Ruby linter written in Rust"
license = "MIT"

[[bin]]
name = "rblint"
path = "src/main.rs"

[lib]
name = "rblint"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
colored = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
notify = "7"
ctrlc = "3"
serde_yml = "0.0.12"
lib-ruby-parser = "4.0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
